--- a/AppCucinaProject/app/build.gradle
+++ b/AppCucinaProject/app/build.gradle
@@ -2,7 +2,8 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    //buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.0"
 
     defaultConfig {
         applicationId "com.example.studente.appcucinaproject"
@@ -26,4 +27,5 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:cardview-v7:23.0.0'
     compile 'com.android.support:recyclerview-v7:23.0.0'
+    compile project(':rangeseekbar')
 }
