--- a/AppCucinaProject/app/src/main/AndroidManifest.xml
+++ b/AppCucinaProject/app/src/main/AndroidManifest.xml
@@ -53,6 +53,19 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.studente.appcucinaproject.Home" />
         </activity>
+
+
+        <activity
+            android:name=".Spesa.SpesaDetailsActivity"
+            android:parentActivityName=".Spesa.Spesa"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.studente.appcucinaproject.Spesa.Spesa" />
+        </activity>
+
+
+
         <activity
             android:name=".Calcolatrice.Calcolatrice"
             android:label="@string/title_activity_calcolatrice"
@@ -80,7 +93,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.studente.appcucinaproject.Home" />
         </activity>
-        <activity android:name=".Ricetta.Ricetta" />
+
+        <activity
+            android:name=".Ricetta.Ricetta">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.studente.appcucinaproject.Ricettario.Ricettario" />
+        </activity>
+
+
         <activity
             android:name=".Timer.TimerOverActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
