--- a/AppCucinaProject/app/build.gradle
+++ b/AppCucinaProject/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:cardview-v7:23.0.0'
     compile 'com.android.support:recyclerview-v7:23.0.0'
+    compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     compile project(':rangeseekbar')
 }
