--- a/AppCucinaProject/app/build.gradle
+++ b/AppCucinaProject/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.0.0'
     compile 'com.android.support:recyclerview-v7:23.0.0'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
+    compile 'com.github.clans:fab:1.6.2' //per FAB menu
     compile project(':rangeseekbar')
 }
