--- a/AppCucinaProject/app/src/main/AndroidManifest.xml
+++ b/AppCucinaProject/app/src/main/AndroidManifest.xml
@@ -116,6 +116,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.studente.appcucinaproject.Ricettario.Ricettario" />
         </activity>
+        <activity
+            android:name=".RicercaAvanzata.Visualizzazione_Ricerca_av"
+            android:label="@string/title_activity_visualizzazione__ricerca_av"
+            android:parentActivityName=".RicercaAvanzata.RicercaAV"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.studente.appcucinaproject.RicercaAvanzata.RicercaAV" />
+        </activity>
     </application>
 
 </manifest>
